sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: ';' expected but ',' found.
	var debut=0,fin=getNombreValeurs()
                   ^AlgCocktailSort2:23: error: ';' expected but '[' found.
  Pour tout i dans [debut,fin], faire:
                   ^AlgCocktailSort2:26: error: ';' expected but '[' found.
  Pour tout i dans [fin, debut] en descendant, faire:
                   ^AlgCocktailSort2:29: error: ';' expected but symbol literal found.
tant qu'au moins l'un des parcours a inversé un élément 
                  ^